<resources>
    <string name="app_name">ShibaCam</string>
    <string name="switch_to_video">2video</string>
    <string name="switchCam">Switch</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="capture">Capture</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="Resume">Resume</string>
    <string name="Start">Start</string>
    <string name="Finalize">Finalize</string>
    <string name="back_button_alt">Back</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="video_viewer_tips">Tips for the page:\n\t- tap anywhere to replay\n\t- tap system back button to go back</string>
    <string name="gallery">Gallery</string>
    <string name="img">Img</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="switch_to_photo">2Photo</string>
    <string name="take_a_photo">Take a photo</string>
</resources>