<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CapturePhotoFragment">


    <androidx.camera.view.PreviewView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ImageButton
        android:id="@+id/img_capture_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_start"
        android:contentDescription="@string/take_a_photo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />



    <ImageButton
        android:id="@+id/switch_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_switch"
        android:contentDescription="@string/switchCam"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_capture_btn"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />



    <ImageButton
        android:id="@+id/switchToVideoBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="24dp"
        android:background="@drawable/ic_video"
        android:contentDescription="@string/switch_to_photo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gallery_btn"
        app:layout_constraintStart_toEndOf="@+id/img_capture_btn"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/gallery_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_gallery"
        android:contentDescription="@string/gallery"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>